# ritsu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  math_benchmark.cpp
benchmark/cmake/: benchmark.cmake
cmake/: FindAVX.cmake  libcxxopts.cmake
example/: CMakeLists.txt
example/addition/: CMakeLists.txt  addition.cpp
example/autoencoder/: CMakeLists.txt  autoencoder.cpp  main.cpp
example/convmnist/: CMakeLists.txt  main.cpp
example/datasets/: CMakeLists.txt  mnist_dataset.cpp  mnist_dataset.h
example/gan/: CMakeLists.txt  gan.cpp
example/mnist/: CMakeLists.txt  main.cpp  mnist.cpp
python/wrapper/: wrapper.cpp
ritsu/: CMakeLists.txt
ritsu/include/: Activations.h  HyperParameter.h  Loss.h  Math.h  Metric.h  Model.h  Object.h  Random.h  Ritsu.h  RitsuDebug.h  RitsuDef.h  Tensor.h  TensorMath.h  TensorPool.h  Util.h
ritsu/include/core/: Initializers.h  Shape.h  Time.h
ritsu/include/layers/: Activaction.h  Activation.h  Add.h  AveragePooling.h  AveragePooling2D.h  BatchNormalization.h  Cast.h  CategoryEncoding.h  Concatenate.h  Conv2D.h  Conv2DTranspose.h  Dense.h  Divide.h  Dropout.h  EmbeddingLayer.h  ExpLinear.h  Flatten.h  GaussianNoise.h  Input.h  LambdaOp.h  Layer.h  LeakyRelu.h  Linear.h  MaxPooling.h  MaxPooling2D.h  MinPooling.h  MinPooling2D.h  Multiply.h  Regularization.h  Relu.h  Rescaling.h  Reshape.h  Sigmoid.h  SoftMax.h  Subtract.h  Swish.h  Tanh.h  UpSampling2D.h  UpScale.h
ritsu/include/optimizer/: Ada.h  Adam.h  ExponentialDecay.h  Optimizer.h  SGD.h
ritsu/src/: lib.cpp
test/: ActivationUnitTest.cpp  CMakeLists.txt  DenseUnitTest.cpp  LayerSizeUnitTest.cpp  LossUnitTest.cpp  MathTest.cpp  MathUnitTest.cpp  ModelUnitTest.cpp  OptimizerUnitTest.cpp  RandomUnitTest.cpp  RitsuUnitTest.h  ShapeUnitTest.cpp  TensorUnitTest.cpp
