LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
INCLUDE(libcxxopts)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/datasets)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mnist)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/autoencoder)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/addition)