

# Define all file lists.
FILE(GLOB_RECURSE SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB_RECURSE HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)


FIND_PACKAGE(OpenMP REQUIRED)

ADD_LIBRARY(ritsu ${SOURCE_FILES} ${HEADER_FILES} )

TARGET_LINK_LIBRARIES(ritsu PRIVATE m pthread PUBLIC OpenMP::OpenMP_CXX)

TARGET_INCLUDE_DIRECTORIES(ritsu  PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>
)

