FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	MESSAGE(STATUS "Gtest found: ${GTEST_BOTH_LIBRARIES}")
ELSE()
	MESSAGE(ERROR "Gtest is required in order to compile and run the tests")
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ritsu-unit-test ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(ritsu-unit-test ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ritsu pthread )
TARGET_INCLUDE_DIRECTORIES(ritsu-unit-test PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/ )
ADD_DEPENDENCIES(ritsu-unit-test ritsu)

INSTALL(TARGETS ritsu-unit-test DESTINATION bin)
ADD_TEST(NAME assert-functionality
		COMMAND ritsu-unit-test 
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
