FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	MESSAGE(STATUS "Gtest found: ${GTEST_BOTH_LIBRARIES}")
ELSE()
	MESSAGE(ERROR "Gtest is required in order to compile and run the tests")
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ritsu-unit-test ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(ritsu-unit-test ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ritsu )
TARGET_INCLUDE_DIRECTORIES(ritsu-unit-test PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/ )
ADD_DEPENDENCIES(ritsu-unit-test ritsu)

INSTALL(TARGETS ritsu-unit-test DESTINATION bin)
ADD_TEST(NAME assert-functionality
		COMMAND ritsu-unit-test 
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

IF (TARGET ritsu-rocm)

	ADD_EXECUTABLE(ritsu-unit-test-rocm ${SOURCE_FILES} ${HEADER_FILES})
	TARGET_LINK_LIBRARIES(ritsu-unit-test-rocm ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ritsu-rocm )
	TARGET_INCLUDE_DIRECTORIES(ritsu-unit-test-rocm PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/ )
	ADD_DEPENDENCIES(ritsu-unit-test-rocm ritsu-rocm)

	INSTALL(TARGETS ritsu-unit-test-rocm DESTINATION bin)
	ADD_TEST(NAME assert-functionality-rocm
			COMMAND ritsu-unit-test-rocm
			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF()


ADD_EXECUTABLE(ritsu-unit-test-nomp ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(ritsu-unit-test-nomp ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ritsu-no-opm pthread )
TARGET_INCLUDE_DIRECTORIES(ritsu-unit-test-nomp PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/ )
ADD_DEPENDENCIES(ritsu-unit-test-nomp ritsu)

INSTALL(TARGETS ritsu-unit-test-nomp DESTINATION bin)
ADD_TEST(NAME assert-functionality-nomp
		COMMAND ritsu-unit-test-nomp
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})