# Define all file lists.
FILE(GLOB_RECURSE ADDITION_MNIST_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE ADDITION_MNIST_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_EXECUTABLE(addition ${ADDITION_MNIST_SOURCE_FILES} ${ADDITION_MNIST_HEADER_FILES} )
TARGET_LINK_LIBRARIES(addition PRIVATE ritsu ritsu_datasets)
