# Define all file lists.
FILE(GLOB_RECURSE AUTO_ENCODER_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE AUTO_ENCODER_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_EXECUTABLE(autoencoder ${AUTO_ENCODER_SOURCE_FILES} ${AUTO_ENCODER_HEADER_FILES} )
TARGET_LINK_LIBRARIES(autoencoder ritsu ritsu_datasets)
