# Define all file lists.
FILE(GLOB_RECURSE CONVOLUTIONAL_MNIST_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE CONVOLUTIONAL_MNIST_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)


ADD_EXECUTABLE(convmnist ${CONVOLUTIONAL_MNIST_SOURCE_FILES} ${CONVOLUTIONAL_MNIST_HEADER_FILES} )
TARGET_LINK_LIBRARIES(convmnist ritsu ritsu_datasets)
