# Define all file lists.
FILE(GLOB_RECURSE DATASETS_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE DATASETS_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(ritsu_datasets SHARED ${DATASETS_SOURCE_FILES} ${DATASETS_HEADER_FILES})

TARGET_INCLUDE_DIRECTORIES (ritsu_datasets
	PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
TARGET_LINK_LIBRARIES(ritsu_datasets PRIVATE ritsu)