# Define all file lists.
FILE(GLOB DATASETS_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(ritsu_datasets ${DATASETS_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES (ritsu_datasets PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
TARGET_LINK_LIBRARIES(ritsu_datasets PRIVATE ritsu)