# Define all file lists.
FILE(GLOB_RECURSE GAN_MNIST_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE GAN_MNIST_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_EXECUTABLE(gan ${GAN_MNIST_SOURCE_FILES} ${GAN_MNIST_HEADER_FILES} )
TARGET_LINK_LIBRARIES(gan PRIVATE ritsu ritsu_datasets)
