# Define all file lists.
FILE(GLOB FORWARD_MNIST_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB FORWARD_MNIST_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_EXECUTABLE(mnist ${FORWARD_MNIST_SOURCE_FILES} ${FORWARD_MNIST_HEADER_FILES} )
TARGET_LINK_LIBRARIES(mnist PRIVATE ritsu ritsu_datasets cxxopts)
